--- a/content/docs/core-concepts/agent-development/tasks.mdx
+++ b/content/docs/core-concepts/agent-development/tasks.mdx
@@ -1,11 +1,11 @@
 ---
-title: Tasks
-description: Managing agent tasks and workflows
+title: "Tasks"
+description: "Understanding task management in ElizaOS, including Task and TaskWorker interfaces, scheduling patterns, and the TaskService implementation from plugin-bootstrap"
 ---
 
 # Tasks
 
-Tasks enable agents to perform scheduled or queued operations independently of message processing. They support background processing, recurring activities, and complex workflows.
+Tasks enable agents to perform scheduled or queued operations independently of message processing. They support background processing, recurring activities, and complex workflows that extend beyond simple message-response patterns.
 
 ## Task Interface
 
