--- a/content/docs/core-concepts/data-state/state-management.mdx
+++ b/content/docs/core-concepts/data-state/state-management.mdx
@@ -353,5 +353,5 @@ console.log("Weather provider result:", weatherResult);
 ## Related Topics
 
 - [Memory System](./memory-system) - How memories are stored and retrieved
-- [Components](../entity-system/components) - Entity component system for structured data
-- [Actions](../actions-interactions/actions) - Using state in action handlers
+- [Database Architecture](./database) - Entity-component system for structured data
+- [Actions](../agent-development/actions) - Using state in action handlers
