--- a/content/docs/learning-tracks/simple/getting-started/index.mdx
+++ b/content/docs/learning-tracks/simple/getting-started/index.mdx
@@ -11,8 +11,19 @@ Setup and basic concepts for ElizaOS development.
 
 This section covers the essential setup and basic concepts needed to start developing with ElizaOS.
 
-Topics include:
-- Environment setup
-- Basic configuration
-- First agent creation
-- Initial testing
+### Quick Start Options
+- [Quick Start](./quick-start) - Fast track to your first ElizaOS agent
+- [Comprehensive Quick Start Guide](../guides/quickstart-comprehensive) - Detailed beginner's guide with multiple paths
+
+### Core Concepts
+- Environment setup and prerequisites
+- Basic configuration and environment variables
+- First agent creation and customization
+- Initial testing and development workflow
+- Platform integration (Discord, Twitter, Telegram)
+
+### Next Steps
+After completing the getting started guides, explore:
+- [Development Approach Guide](../guides/choosing-development-approach) - Choose between standalone and monorepo
+- [Plugin Development](../guides/plugin-development-linking) - Build custom functionality
+- [Deployment Guide](../guides/deployment-guide) - Deploy to production
