--- a/content/docs/core-concepts/agent-development/character-definition.mdx
+++ b/content/docs/core-concepts/agent-development/character-definition.mdx
@@ -368,49 +368,138 @@ if (result.success) {
 const jsonResult = parseAndValidateCharacter(jsonString);
 ```
 
-### Validation Schema
+### Validation Schema Details
 
-The character schema includes validation for:
+The character schema includes comprehensive validation for all properties:
 
 ```typescript
-// UUID validation
-const uuidSchema = z.string().regex(
-  /^[0-9a-f]{8}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{12}$/i,
-  'Invalid UUID format'
-);
+// UUID validation with strict format checking
+const uuidSchema = z
+  .string()
+  .regex(/^[0-9a-f]{8}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{12}$/i, 'Invalid UUID format');
 
-// Content validation
-const contentSchema = z.object({
-  text: z.string().optional(),
-  thought: z.string().optional(),
-  actions: z.array(z.string()).optional(),
-  providers: z.array(z.string()).optional(),
-  source: z.string().optional(),
-  target: z.string().optional(),
-  url: z.string().optional(),
-  inReplyTo: uuidSchema.optional(),
-  attachments: z.array(z.any()).optional(),
-  channelType: z.string().optional(),
-}).passthrough();
+// Content validation for message examples
+const contentSchema = z
+  .object({
+    text: z.string().optional(),
+    thought: z.string().optional(),
+    actions: z.array(z.string()).optional(),
+    providers: z.array(z.string()).optional(),
+    source: z.string().optional(),
+    target: z.string().optional(),
+    url: z.string().optional(),
+    inReplyTo: uuidSchema.optional(),
+    attachments: z.array(z.any()).optional(),
+    channelType: z.string().optional(),
+  })
+  .passthrough(); // Allow additional properties
 
-// Main character schema
-export const characterSchema = z.object({
-  id: uuidSchema.optional(),
-  name: z.string().min(1, 'Character name is required'),
-  username: z.string().optional(),
-  system: z.string().optional(),
-  templates: z.record(templateTypeSchema).optional(),
-  bio: z.union([z.string(), z.array(z.string())]),
-  messageExamples: z.array(z.array(messageExampleSchema)).optional(),
-  postExamples: z.array(z.string()).optional(),
-  topics: z.array(z.string()).optional(),
-  adjectives: z.array(z.string()).optional(),
-  knowledge: z.array(knowledgeItemSchema).optional(),
-  plugins: z.array(z.string()).optional(),
-  settings: settingsSchema,
-  secrets: secretsSchema,
-  style: styleSchema,
-}).strict();
+// Message example validation
+const messageExampleSchema = z.object({
+  name: z.string(),
+  content: contentSchema,
+});
+
+// Directory item validation for knowledge base
+const directoryItemSchema = z.object({
+  directory: z.string(),
+  shared: z.boolean().optional(),
+});
+
+// Knowledge item can be string, path object, or directory
+const knowledgeItemSchema = z.union([
+  z.string(),
+  z.object({
+    path: z.string(),
+    shared: z.boolean().optional(),
+  }),
+  directoryItemSchema,
+]);
+
+// Template type validation (string or function)
+const templateTypeSchema = z.union([
+  z.string(),
+  z.function().optional(), // Functions allowed in runtime but not in JSON
+]);
+
+// Style configuration validation
+const styleSchema = z
+  .object({
+    all: z.array(z.string()).optional(),
+    chat: z.array(z.string()).optional(),
+    post: z.array(z.string()).optional(),
+  })
+  .optional();
+
+// Settings validation - flexible object
+const settingsSchema = z.record(z.union([z.string(), z.boolean(), z.number(), z.any()])).optional();
+
+// Secrets validation
+const secretsSchema = z.record(z.union([z.string(), z.boolean(), z.number()])).optional();
+
+// Main character schema with strict validation
+export const characterSchema = z
+  .object({
+    id: uuidSchema.optional(),
+    name: z.string().min(1, 'Character name is required'),
+    username: z.string().optional(),
+    system: z.string().optional(),
+    templates: z.record(templateTypeSchema).optional(),
+    bio: z.union([z.string(), z.array(z.string())]),
+    messageExamples: z.array(z.array(messageExampleSchema)).optional(),
+    postExamples: z.array(z.string()).optional(),
+    topics: z.array(z.string()).optional(),
+    adjectives: z.array(z.string()).optional(),
+    knowledge: z.array(knowledgeItemSchema).optional(),
+    plugins: z.array(z.string()).optional(),
+    settings: settingsSchema,
+    secrets: secretsSchema,
+    style: styleSchema,
+  })
+  .strict(); // Only allow known properties
+```
+
+### Validation Result Interface
+
+The validation functions return structured results:
+
+```typescript
+interface CharacterValidationResult {
+  success: boolean;
+  data?: Character;
+  error?: {
+    message: string;
+    issues?: z.ZodIssue[];
+  };
+}
+
+// Usage examples
+const result = validateCharacter(characterData);
+if (result.success) {
+  const character: Character = result.data;
+  // Use validated character
+} else {
+  console.error('Validation failed:', result.error.message);
+  result.error.issues?.forEach(issue => {
+    console.error(`${issue.path.join('.')}: ${issue.message}`);
+  });
+}
+```
+
+### Type Guards
+
+ElizaOS provides type guards for runtime validation:
+
+```typescript
+import { isValidCharacter } from '@elizaos/core';
+
+// Type guard usage
+if (isValidCharacter(data)) {
+  // TypeScript knows data is Character
+  console.log(data.name); // Safe to access
+} else {
+  console.error('Invalid character data');
+}
 ```
 
 ## Complete Character Example
